Fri May 08 11:00:14 GMT 2015  Olly Betts <olly@survex.com>

	* perl/t/document.t,perl/t/writabledatabase.t: Add missing 'my'.

Fri May 08 10:55:32 GMT 2015  Olly Betts <olly@survex.com>

	* perl/perl.i: Wrap missing constants.

Fri May 08 10:54:51 GMT 2015  Olly Betts <olly@survex.com>

	* perl/perl.i,perl/t/parser.t: Wrap WILDCARD_LIMIT_* constants as
	  constants.

Fri May 08 10:48:20 GMT 2015  Olly Betts <olly@survex.com>

	* perl/t/parser.t: Update to use Test::More.

Fri May 08 09:56:52 GMT 2015  Olly Betts <olly@survex.com>

	* perl/perl.i: Remove duplicate %constant for OP_WILDCARD.

Tue May 05 04:56:25 GMT 2015  Olly Betts <olly@survex.com>

	* python/pythontest.py,python3/pythontest.py: Fix typo in test context
	  ("multipler" -> "multiplier").

Tue May 05 04:09:24 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/collapse.t: Add test coverage for
	  Enquire::set_collapse_key() with 1 and 2 parameters.

Fri May 01 12:16:29 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Update check for -fvisibility to match xapian-core's.

Fri May 01 12:15:28 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Simplify test of Ruby version.

Fri May 01 12:14:31 GMT 2015  Olly Betts <olly@survex.com>

	* INSTALL: IRIX is past EOL so drop information about IRIX make.

Fri May 01 12:05:53 GMT 2015  Olly Betts <olly@survex.com>

	* perl/perl.i: Add workaround for Perl defining a seed() macro which
	  breaks '#include <algorithm>' undef C++11 with GCC.

Fri May 01 11:04:33 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,m4/ax_cxx_compile_stdcxx_11.m4: Require a C++11
	  compiler.

Fri Apr 24 03:26:10 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Don't wrap Query::LEAF_* - they're for internal
	  use in xapian-core.
	* python/smoketest.py: Add test_internal_enums_not_wrapped to check
	  that xapian.Query has no attributes starting with "LEAF_".

Mon Apr 13 06:22:15 GMT 2015  Olly Betts <olly@survex.com>
