@@ -1,3 +1,4 @@
+use strict;
 # Make warnings fatal
 use warnings;
 BEGIN {$SIG{__WARN__} = sub { die "Terminating test due to warning: $_[0]" } };
