@@ -1,3 +1,7 @@
+Fri May 08 11:01:03 GMT 2015  Olly Betts <olly@survex.com>
+
+	* perl/t/: Add 'use strict' to all testcases.
+
 Fri May 08 11:00:14 GMT 2015  Olly Betts <olly@survex.com>
 
 	* perl/t/document.t,perl/t/writabledatabase.t: Add missing 'my'.
